--- a/.gitconfig
+++ b/.gitconfig
@@ -163,11 +163,13 @@
 
     # Display the number of author line changes for each person to see who is active
     # Note: these requires additional \'s to escape the escapes and "'s
-    poll-author-line-changes = !git ls-files -z | xargs -0n1 git blame -w | perl -n -e '/^.*?\\((.*?)\\s+[\\d]{4}/ && print $1,\"\\n\"' | sort -f | uniq -c | sort -n
+    parse-blame = !perl -n -e '/^.*?\\((.*?)\\s+[\\d]{4}/ && print $1,\"\\n\"' | sort -f | uniq -c | sort -n
+    poll-author-line-changes = !git ls-files -z | xargs -0n1 git blame -w | git parse-blame
+    poll-author-line-changes-for-file = !sh -c 'git blame "${1}" | git parse-blame' -
 
     # Display the number of author commits for each person to see who is active
-    poll-author-commits = !git log --all -M -C --format=%an | sort | grep -v '^$' | uniq -c | sort
-    poll-author-commits-for-file = !sh -c 'git log -M -C --format=%an -- ${GIT_PREFIX}${1} | sort | grep -v \"^$\" | uniq -c | sort' -
+    poll-author-commits = !git log --all -M -C --format=%an | sort | grep -v '^$' | uniq -c | sort -n
+    poll-author-commits-for-file = !sh -c 'git log -M -C --format=%an -- ${GIT_PREFIX}${1} | sort | grep -v \"^$\" | uniq -c | sort -n' -
     poll-author-commits-for-dir = !sh -c "'cd ${GIT_PREFIX}; for FILE in $( ls ); do echo $FILE; git poll-author-commits-for-file ${FILE}; done'" -
 
     # Pull current branch from origin repository
