--- a/.gitconfig
+++ b/.gitconfig
@@ -162,10 +162,12 @@
     poll-files-commits = !git log --all -M -C --name-only --format='format:' "$@" | sort | grep -v '^$' | uniq -c | sort | awk 'BEGIN {print "count,file"} {print $1 "," $2}'
 
     # Display the number of author line changes for each person to see who is active
-    # Note: these requires additional \'s to escape the escapes and "'s
+	# Note: Some of these require running from the root directory of the repo
+    # Implementation note: these requires additional \'s to escape the escapes and "'s
     parse-blame = !perl -n -e '/^.*?\\((.*?)\\s+[\\d]{4}/ && print $1,\"\\n\"' | sort -f | uniq -c | sort -n
     poll-author-line-changes = !git ls-files -z | xargs -0n1 git blame -w | git parse-blame
     poll-author-line-changes-for-file = !sh -c 'git blame "${1}" | git parse-blame' -
+    poll-author-line-changes-for-dir = !sh -c "'cd ${1}; for FILE in $( ls ); do if [[ -f $FILE ]]; then echo $FILE; git poll-author-line-changes-for-file ${1}/${FILE}; fi; done'" -
 
     # Display the number of author commits for each person to see who is active
     poll-author-commits = !git log --all -M -C --format=%an | sort | grep -v '^$' | uniq -c | sort -n
