--- a/.gitconfig
+++ b/.gitconfig
@@ -234,6 +234,12 @@
     # Push nothing to temporary branch of scratch repository (removes branch on remote with same name as current local branch plus "_temp" appended)
     pssrt = !sh -c 'git pssrb $( git gcb )_temp' -
 
+    # Checkout branch named "python2" and update submodules
+	py2  = !git co python2 && git su
+
+    # Checkout branch named "python3" and update submodules
+	py3  = !git co python3 && git su
+
 	# Interactively rebase the last N commits from HEAD
 	rbih = !sh -c 'git rebase --interactive HEAD~${1}' -
 
